--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Generate GitHub contribution grid snake
         uses: Platane/snk@v3
         with:
-          github_user_name: ramordeeple
+          github_user_name: ${{ github.repository_owner }}
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
