--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -17,12 +17,11 @@ jobs:
         uses: Platane/snk@v3
         with:
           github_user_name: ${{ github.repository_owner }}
+          github_token: ${{ secrets.PAT_TOKEN }}
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg
-          palette: github-dark
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          args: "--palette github-dark"
 
       - name: List generated files
         run: ls -R dist
@@ -33,6 +32,6 @@ jobs:
           target_branch: output
           build_dir: dist
           keep_history: true
-          force_orphan: true
+          allow_empty_commit: true
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
