--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -20,8 +20,7 @@ jobs:
           github_token: ${{ secrets.PAT_TOKEN }}
           outputs: |
             dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg
-          args: "--palette github-dark"
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
 
       - name: List generated files
         run: ls -R dist
