--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -10,8 +10,7 @@ on:
 
 jobs:
   generate:
-    runs-on: windows-latest
-    timeout-minutes: 10
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
